2010-01-14  Glenn Morris  <rgm@gnu.org>

	* frame.el (show-trailing-whitespace): Safe if boolean.  (Bug#5312)

2010-01-14  Kenichi Handa  <handa@m17n.org>

	* composite.el (auto-composition-mode): Make it a buffer local
	variable (permanent-local).
	(auto-composition-function): Set the default value to
	auto-compose-chars.
	(auto-composition-mode): Make it a simple function, not a minor mode.
	(global-auto-composition-mode): Likewise.
	(turn-on-auto-composition-if-enabled): Delete it.

2010-01-13  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-bmenu-execute-deletions): Doc fix (Bug#5276).

2010-01-12  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (copy-directory): Compute target for recursive
	directories with identical names.  (Bug#5343)

2010-01-12  Glenn Morris  <rgm@gnu.org>

	* mail/emacsbug.el (report-emacs-bug-pretest-address): Set
	it to bug-gnu-emacs rather than emacs-pretest-bug.

2010-01-12  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/data-debug.el (data-debug): Fix customization group reference.

2010-01-12  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/semantic/analyze.el (semantic-analyze-push-error)
	(semantic-analyze-context, semantic-analyze-context-assignment)
	(semantic-analyze-find-tag-sequence, semantic-analyze-find-tag):
	* cedet/semantic/java.el (java-mode, semantic-tag-include-filename)
	(semantic-java-doc-keywords-map):
	* cedet/semantic/bovine/c.el (c-mode, semantic-c-member-of-autocast)
	(semantic-lex-c-nested-namespace-ignore-second, semantic-parse-region)
	(semantic-c-parse-lexical-token, semantic-c-debug-mode-init-pch)
	(semantic-c-classname, semantic-format-tag-uml-prototype)
	(semantic-c-dereference-namespace, semantic-analyze-type-constants):
	* cedet/semantic/bovine/el.el (semantic-elisp-form-to-doc-string)
	(semantic-emacs-lisp-obsoleted-doc, semantic-up-context)
	(semantic-get-local-variables, semantic-end-of-command)
	(semantic-beginning-of-command, semantic-ctxt-current-class-list)
	(lisp-mode):