@@ -1,3 +1,8 @@
+2010-01-14  Stephen Leake  <stephen_leake@member.fsf.org>
+
+	* progmodes/ada-mode.el (ada-clean-buffer-before-saving): Make obsolete.
+	(ada-mode): Don't obey `ada-clean-buffer-before-saving' anymore.
+
 2010-01-14  Glenn Morris  <rgm@gnu.org>
 
 	* frame.el (show-trailing-whitespace): Safe if boolean.  (Bug#5312)
